2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_connection.c: (gam_connection_new): Change event queue flush
	to 100 ms.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* doc/config.html:
	* doc/gamin.html: Update documentation

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll.c: (node_add_subscription),
	(node_remove_subscription), (gam_poll_delist_node),
	(gam_poll_relist_node), (gam_poll_flowon_node),
	(gam_poll_flowoff_node), (poll_file), (gam_poll_scan_callback),
	(gam_poll_first_scan_dir):
	* server/gam_server.c: (gam_add_subscription),
	(gam_remove_subscription):

	Consider fsset options when deciding between kernel/poll/none
	subscription options.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_conf.c: (gam_conf_string_to_mon_type),
	(gam_conf_read_internal), (gam_conf_read):
	Make poll timeout value optional, read in /etc/gamin/gaminrc, then
	~/.gaminrc, finally /etc/gamin/mandatory_gaminrc.
	* server/gam_fs.c: (gam_fs_set): Use GAMIN_POLL_DEFAULT when passed -1 for
	poll_timeout.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* libgamin/gam_api.c: (gamin_check_cred):
	* server/gam_channel.c: (gam_client_conn_check_cred),
	(gam_client_create):
	* server/gam_dnotify.c: (gam_dnotify_debug):
	* server/gam_tree.c: (gam_tree_add_at_path): Clean up gcc warnings

Fri Aug  5 14:07:24 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/gam_error.h libgamin/gam_api.c libgamin/gam_fork.c python/gamin.c
	  server/gam_debugging.c server/gam_dnotify.c server/gam_eq.c
	  server/gam_fs.c server/gam_inotify.c server/gam_server.c
	  server/gam_server.h server/gam_tree.c tests/testing.c: code cleanups
	  for reports from gcc and sparse.

Fri Aug  5 11:52:56 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: tiny fix for the python package

2005-08-04  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_eq.c: (gam_eq_queue), (gam_eq_flush): Fix a segfault when the